force-app/main/default/objects/sfcma__Transaction__c/sfcma__Transaction__c.object-meta.xml
<CustomObject>
    <description>Contains information about a customer payment attempt. For example, method of payment and whether it was successful.</description>
    <label>Checkout Transaction</label>
    <nameField>
        <displayFormat>TRANS-{000000}</displayFormat>
        <label>Checkout Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>