force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Address_Line_2__c</fullName>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>