force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__AddressCity__c.field-meta.xml
<CustomField>
    <fullName>sfcma__AddressCity__c</fullName>
    <label>Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>