force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__AddressCountry__c.field-meta.xml
<CustomField>
    <fullName>sfcma__AddressCountry__c</fullName>
    <label>Address Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>