force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>sfcma__AddressLine1__c</fullName>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>