force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__AddressState__c.field-meta.xml
<CustomField>
    <fullName>sfcma__AddressState__c</fullName>
    <label>Address State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>