force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__AddressZipCode__c.field-meta.xml
<CustomField>
    <fullName>sfcma__AddressZipCode__c</fullName>
    <label>Address Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>