force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__CreatedAt__c.field-meta.xml
<CustomField>
    <fullName>sfcma__CreatedAt__c</fullName>
    <label>Created At</label>
    <type>DateTime</type>
</CustomField>