force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__FailureCode__c.field-meta.xml
<CustomField>
    <fullName>sfcma__FailureCode__c</fullName>
    <label>Failure Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>