force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>sfcma__InvoiceNumber__c</fullName>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>