force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__MethodOfPayment__c.field-meta.xml
<CustomField>
    <fullName>sfcma__MethodOfPayment__c</fullName>
    <label>Method of Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>