force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__StripeChargeId__c.field-meta.xml
<CustomField>
    <fullName>sfcma__StripeChargeId__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Charge Id (deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>