force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__StripeChargeIdUnique__c.field-meta.xml
<CustomField>
    <fullName>sfcma__StripeChargeIdUnique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Stripe Charge Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>