force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__StripeInvoiceId__c.field-meta.xml
<CustomField>
    <fullName>sfcma__StripeInvoiceId__c</fullName>
    <label>Stripe Invoice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>