force-app/main/default/objects/sfcma__Transaction__c/fields/sfcma__TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TotalAmount__c</fullName>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>